err/courier-pythonfilter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/courier'...
Compiling './lib/python3.5/site-packages/courier/authdaemon.py'...
***   File "./lib/python3.5/site-packages/courier/authdaemon.py", line 76
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/courier/config.py'...
***   File "./lib/python3.5/site-packages/courier/config.py", line 398
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/courier/quarantine.py'...
***   File "./lib/python3.5/site-packages/courier/quarantine.py", line 148
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/courier/xfilter.py'...
***   File "./lib/python3.5/site-packages/courier/xfilter.py", line 117
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pythonfilter'...
Compiling './lib/python3.5/site-packages/pythonfilter/add_signature.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/add_signature.py", line 79
    except courier.xfilter.LoopError, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/attachments.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/attachments.py", line 43
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/auto_whitelist.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/auto_whitelist.py", line 41
    except TtlDb.OpenError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/clamav.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/clamav.py", line 33
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/comeagain.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/comeagain.py", line 41
    except TtlDb.OpenError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/deliveredto.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/deliveredto.py", line 60
    print 'Use:  deliveredto.py <message body file>'
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythonfilter/dialback.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/dialback.py", line 59
    except TtlDb.OpenError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/greylist.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/greylist.py", line 62
    except TtlDb.OpenError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/localsenders.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/localsenders.py", line 64
    print 'Use:  localsenders.py <control file>'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythonfilter/noduplicates.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/noduplicates.py", line 53
    print 'Use:  noduplicates.py <control file>'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythonfilter/noreceivedheaders.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/noreceivedheaders.py", line 38
    except courier.xfilter.LoopError, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/nosuccessdsn.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/nosuccessdsn.py", line 57
    print 'Use:  nosuccessdsn.py <control file>'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythonfilter/quota.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/quota.py", line 49
    except courier.authdaemon.IoError, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/spamassassin.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/spamassassin.py", line 80
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythonfilter/spfcheck.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/spfcheck.py", line 57
    print 'Use:  spfcheck.py <control file>'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythonfilter/whitelist_auth.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/whitelist_auth.py", line 57
    print 'Use:  whitelist_auth.py <control file>'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythonfilter/whitelist_block.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/whitelist_block.py", line 61
    print 'Use:  whitelist_block.py <control file>'
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythonfilter/whitelist_dnswl.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/whitelist_dnswl.py", line 76
    print 'Use:  whitelist_dnswl.py <control file>'
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythonfilter/whitelist_relayclients.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/whitelist_relayclients.py", line 60
    print 'Use:  whitelist_relayclients.py <control file>'
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pythonfilter/whitelist_spf.py'...
***   File "./lib/python3.5/site-packages/pythonfilter/whitelist_spf.py", line 56
    print 'Use:  whitelist_spf.py <control file>'
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
